<resources>
<!--    easier to modify here than shotgun surgery in xml filess-->
    <string name="app_name">Aiya!</string>
    <!-- Strings related to login -->
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password</string>
    <string name="action_sign_in">Log in</string>
    <string name="action_sign_in_short">Sign up</string>
    <string name="welcome">"Welcome !"</string>
    <string name="invalid_username">Not a valid username</string>
    <string name="invalid_password">Password must be >5 characters</string>
    <string name="login_failed">"Login failed"</string>

    <string name="log_in">LOG IN</string>
    <string name="username_text">USERNAME</string>
    <string name="password_text">PASSWORD</string>
    <string name="confirm_password_text">CONFIRM PASSWORD</string>
    <string name="create_your">CREATE YOUR USERNAME\nAND PASSWORD</string>
    <string name="signup_link">New to Aiya? Sign up here!</string>
    <string name="account_create_success">Your account is successfully registered!</string>
</resources>