<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/container"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingBottom="@dimen/activity_vertical_margin"
    tools:context=".ui.login.LoginActivity">

    <TextView
        android:id="@+id/create_your"
        android:layout_width="361dp"
        android:layout_height="107dp"
        android:layout_alignParentLeft="true"
        android:layout_alignParentTop="true"
        android:gravity="top"
        android:lineSpacingExtra="-2sp"
        android:text="@string/create_your"
        android:textAppearance="@style/header_text"
        tools:layout_editor_absoluteX="2dp"
        tools:layout_editor_absoluteY="2dp" />

    <TextView
        android:id="@+id/username_text"
        android:layout_width="130dp"
        android:layout_height="27dp"
        android:layout_alignParentLeft="true"
        android:layout_alignParentTop="true"
        android:layout_marginTop="96dp"
        android:gravity="top"
        android:lineSpacingExtra="-2sp"
        android:text="@string/username_text"
        android:textAppearance="@style/subheader_text"
        app:layout_constraintBottom_toTopOf="@+id/username"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <EditText
        android:id="@+id/username"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="136dp"
        android:hint="@string/prompt_email"
        android:inputType="textEmailAddress"
        android:selectAllOnFocus="true"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/password_text"
        android:layout_width="130dp"
        android:layout_height="27dp"
        android:layout_alignParentLeft="true"
        android:layout_alignParentTop="true"
        android:layout_marginTop="96dp"
        android:gravity="top"
        android:lineSpacingExtra="-2sp"
        android:text="@string/password_text"
        android:textAppearance="@style/subheader_text"
        app:layout_constraintBottom_toTopOf="@+id/password"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.896" />

    <EditText
        android:id="@+id/password"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="52dp"
        android:hint="@string/prompt_password"
        android:imeActionLabel="@string/action_sign_in_short"
        android:imeOptions="actionDone"
        android:inputType="textPassword"
        android:selectAllOnFocus="true"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/username" />


    <TextView
        android:id="@+id/confirm_password_text"
        android:layout_width="253dp"
        android:layout_height="33dp"
        android:layout_alignParentLeft="true"
        android:layout_marginBottom="12dp"
        android:lineSpacingExtra="-2sp"
        android:text="@string/confirm_password_text"
        android:textAppearance="@style/subheader_text"
        app:layout_constraintBottom_toTopOf="@+id/confirm_password"
        tools:layout_editor_absoluteX="0dp" />

    <EditText
        android:id="@+id/confirm_password"
        android:layout_width="379dp"
        android:layout_height="wrap_content"
        android:hint="@string/prompt_password"
        android:imeActionLabel="@string/action_sign_in_short"
        android:imeOptions="actionDone"
        android:inputType="textPassword"
        android:selectAllOnFocus="true"
        tools:layout_editor_absoluteX="0dp"
        tools:layout_editor_absoluteY="345dp" />

    <Button
        android:id="@+id/signup"
        android:layout_width="321dp"
        android:layout_height="40dp"
        android:layout_centerHorizontal="true"
        android:layout_centerVertical="true"
        android:layout_gravity="start"
        android:background="@drawable/button"
        android:text="@string/action_sign_in_short"
        tools:layout_editor_absoluteX="32dp"
        tools:layout_editor_absoluteY="446dp" />


</androidx.constraintlayout.widget.ConstraintLayout>